[tool.poetry]
name = "fast-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langgraph-sdk = "^0.1.48"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
